--- a/css/styles.css
+++ b/css/styles.css
@@ -2,34 +2,25 @@
   margin: 0 auto;
   padding: -1px;
 }
+nav{
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
 header{
   position: relative;
   height: 100%;
   min-height: 650px;
   text-align: center;
   background-image: url(../img/background.jpg);
-  background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   font-family: 'Open Sans', sans-serif;
   }
-nav{
-    background-color: rgba(252, 252, 252, 0);
-    height: 100px;
-    z-index: 20;
-    }
-h1{
-  font-family: 'Open Sans', sans-serif;
-  text-transform: uppercase;
-  color: #1B1464;
-  font-weight: bold;
-}
-h2{
-  font-family: 'Open Sans', sans-serif;
-}
 .logo{
+  margin-top: 20px;
   background-image: url(../img/adelantos.png);
   background-repeat: no-repeat;
   background-position: center;
@@ -43,17 +34,153 @@ h2{
   font-size: 14px;
   color: #1B1464;
 }
-nav{
-  padding-top: 20px;
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-}
-main{
-}
-.account a{
+.solicitud a{
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   color: #1B1464;
   font-weight: 700;
+  margin-right: 20px;
+}
+.btn {
+  background: #595EC2;
+  background-image: -webkit-linear-gradient(top, #595EC2, #1B1464);
+  background-image: -moz-linear-gradient(top, #595EC2, #1B1464);
+  background-image: -ms-linear-gradient(top, #595EC2, #1B1464);
+  background-image: -o-linear-gradient(top, #595EC2, #1B1464);
+  background-image: linear-gradient(to bottom, #595EC2, #1B1464);
+  -webkit-border-radius: 10;
+  -moz-border-radius: 10;
+  border-radius: 10px;
+  font-family: 'Open sans' sans-serif;
+  color: #ffffff;
+  font-size: 14px;
+  padding: 5px 25px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+h1{
+  font-family: 'Open Sans', sans-serif;
+  text-transform: uppercase;
+  color: #1B1464;
+  font-weight: bold;
+}
+h2{
+  font-family: 'Open Sans', sans-serif;
+  color: #1B1464;
+}
+.caja{
+  margin-top: 30px;
+  text-align: center;
+  background-color: #fff;
+  width: 60%;
+  height: 400px;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 0px 24px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 24px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 24px 0px rgba(0,0,0,0.75);
+}
+.caja h3{
+  text-transform: uppercase;
+  color: #1B1464;
+  padding: 30px;
+}
+/* RANGER */
+input[type=range] {
+  height: 55px;
+  -webkit-appearance: none;
+  margin: 10px 0;
+  width: 100%;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 27px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 2px #828282;
+  background: #595EC2;
+  border-radius: 50px;
+  border: 3px solid #B3B3B3;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 2px 2px 5px #969696;
+  border: 2px solid #D4D4D4;
+  height: 45px;
+  width: 50px;
+  border-radius: 45px;
+  background: #575760;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -11.5px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #595EC2;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 27px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 2px #828282;
+  background: #595EC2;
+  border-radius: 50px;
+  border: 3px solid #B3B3B3;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 2px 2px 5px #969696;
+  border: 2px solid #D4D4D4;
+  height: 45px;
+  width: 50px;
+  border-radius: 45px;
+  background: #575760;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 27px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #595EC2;
+  border: 3px solid #B3B3B3;
+  border-radius: 100px;
+  box-shadow: 1px 1px 2px #828282;
+}
+input[type=range]::-ms-fill-upper {
+  background: #595EC2;
+  border: 3px solid #B3B3B3;
+  border-radius: 100px;
+  box-shadow: 1px 1px 2px #828282;
+}
+input[type=range]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 2px 2px 5px #969696;
+  border: 2px solid #D4D4D4;
+  height: 45px;
+  width: 50px;
+  border-radius: 45px;
+  background: #575760;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #595EC2;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #595EC2;
 }
