--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,10 +4,14 @@ $secundary-color: #666;
 
 *{
   margin: 0 auto;
+  box-sizing: border-box;
 }
 body{
   font: 100% $typo-primary;
   color: $primary-color;
+}
+.container{
+  max-width: 1024px;
 }
 header{
   position: relative;
@@ -17,6 +21,14 @@ header{
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  .layout{
+    @media only screen and (min-width: 768px){
+      display: none;
+    }
+    @media only screen and (max-width: 768px) {
+      display: block;
+    }
+  }
   nav{
     display: flex;
     align-items: baseline;
@@ -28,13 +40,15 @@ header{
       width: 280px;
       height: 50px;
     }
-    .menu ul li{
+    ul{
+      padding: 0px 5px;
+    }
+    .menu-desktop ul li{
       display: inline-block;
       text-decoration: none;
     }
     .menu-b{
-      margin: 5px;
-      font-size: 14px;
+      font-size: 12px;
       color: $primary-color;
     }
     .solicitud a{
@@ -69,20 +83,8 @@ header{
       background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
       text-decoration: none;
     }
-  }
-}
-@media only screen and (max-width: 1024px){
-  .logo{
-    width: 80%;
-    padding: 0;
-  }
-  header{
-    nav{
-      .menu-b{
-        font-size: 10px;
-        margin: 0 auto;
-        text-align: center;
-      }
+    @media only screen and (max-width: 768px) {
+    display: none;
     }
   }
 }
