--- a/scss/30_styles.scss
+++ b/scss/30_styles.scss
@@ -17,6 +17,10 @@ header {
   background-size: cover;
   position: relative;
   text-align: center;
+  @media only screen and (min-width: 1024px) {
+    max-height: 100%;
+    height: 100vh;
+  }
 
   .layout {
     @media only screen and (min-width: 768px) {
@@ -97,7 +101,7 @@ h2 {
 }
 
 .box {
-  background-color: #fff;
+  background-color: $white;
   border-radius: 20px;
   box-shadow: 0 0px 24px 0px rgba(0, 0, 0, 0.3);
   height: 100%;
@@ -106,7 +110,7 @@ h2 {
   padding-bottom: 30px;
   padding-top: 30px;
   text-align: center;
-  width: 90%;
+  width: 80%;
 }
 
 .number {
