--- a/icomoon/style.css
+++ b/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?mntm1j');
-  src:  url('fonts/icomoon.eot?mntm1j#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?mntm1j') format('truetype'),
-    url('fonts/icomoon.woff?mntm1j') format('woff'),
-    url('fonts/icomoon.svg?mntm1j#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?nyu2tp');
+  src:  url('fonts/icomoon.eot?nyu2tp#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?nyu2tp') format('truetype'),
+    url('fonts/icomoon.woff?nyu2tp') format('woff'),
+    url('fonts/icomoon.svg?nyu2tp#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,31 +24,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-8.2-15:before {
+.icon-user:before {
   content: "\e900";
-  color: #fff;
-}
-.icon-8.2-16:before {
-  content: "\e901";
-  color: #fff;
-}
-.icon-8.2-17:before {
-  content: "\e902";
-  color: #fff;
-}
-.icon-8.2-18:before {
-  content: "\e903";
-  color: #fff;
-}
-.icon-8.2-19:before {
-  content: "\e904";
-  color: #fff;
-}
-.icon-8.2-20:before {
-  content: "\e905";
-  color: #fff;
-}
-.icon-8.2-21:before {
-  content: "\e906";
-  color: #fff;
+  color: #272361;
 }
