--- a/scss/30_styles.scss
+++ b/scss/30_styles.scss
@@ -48,6 +48,8 @@ header {
       background-repeat: no-repeat;
       height: 50px;
       width: 280px;
+      position: relative;
+      top: 10px;
     }
 
     ul {
@@ -69,18 +71,6 @@ header {
       font-size: 14px;
       margin-right: 20px;
 			text-decoration: underline;
-    }
-
-    .btn {
-      background: #595ec2;
-      background-image: linear-gradient(to bottom, #595ec2, $primary-color);
-      border-radius: 10px;
-      color: #fff;
-      font-family: arial;
-      font-size: 14px;
-      padding: 5px 25px;
-      text-decoration: none;
-      text-transform: uppercase;
     }
 
     .btn:hover {
@@ -106,7 +96,7 @@ h2 {
   box-shadow: 0 0px 24px 0px rgba(0, 0, 0, 0.3);
   height: 100%;
   margin-bottom: 30px;
-  margin-top: 30px;
+  margin-top: 50px;
   padding-bottom: 30px;
   padding-top: 30px;
   text-align: center;
