--- a/scss/30_styles.scss
+++ b/scss/30_styles.scss
@@ -64,6 +64,7 @@ header {
     .menu-b {
       color: $primary-color;
       font-size: 12px;
+      padding: 0px 10px;
     }
 
     .solicitud a {
@@ -121,14 +122,32 @@ h2 {
   align-items: center;
   color: $secundary-color;
   display: flex;
-  flex-wrap: nowrap;
   font-size: 20px;
   font-weight: 400;
   justify-content: center;
   padding: 30px 0;
   width: 80%;
+  @media only screen and (min-width: 768px){
+    display: block;
+  }
 }
 
+.title-answer{
+  @media only screen and (max-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    color: $secundary-color;
+    font-size: 20px;
+    font-weight: 400;
+    padding: 30px 0;
+    width: 80%;
+  }
+}
+.retun{
+  @media only screen and (max-width: 768px){
+    text-align:
+  }
+}
 .btn-medium {
   background: #595ec2;
   background-image: linear-gradient(to bottom, #595ec2, $primary-color);
