--- a/scss/00_variables.scss
+++ b/scss/00_variables.scss
@@ -1,4 +1,5 @@
 $logo: url(/img/adelantos.svg);
+$logoChico: url(/img/logochico.svg);
 $typo-primary: 'Open Sans', sans-serif;
 $primary-color: #1b1464;
 $secundary-color: #666;
