--- a/scss/30_styles.scss
+++ b/scss/30_styles.scss
@@ -17,21 +17,20 @@ header {
   background-size: cover;
   position: relative;
   text-align: center;
-  @media only screen and (min-width: 1024px) {
-    max-height: 100%;
-    height: 100vh;
-  }
-
   .layout {
     @media only screen and (min-width: 768px) {
       display: none;
     }
-
     @media only screen and (max-width: 768px) {
       display: block;
     }
   }
-
+  .logo {
+    background-image: $logoChico;
+    background-repeat: no-repeat;
+    height: 40px;
+    width: 40px;
+  }
   nav {
 
     @media only screen and (max-width: 768px) {
@@ -63,7 +62,7 @@ header {
 
     .menu-b {
       color: $primary-color;
-      font-size: 12px;
+      font-size: 14px;
       padding: 0px 10px;
     }
 
@@ -84,7 +83,7 @@ header {
 
 h1 {
   font-weight: 600;
-  padding: 15px 0;
+  padding: 5px 0;
 }
 
 h2 {
@@ -101,7 +100,11 @@ h2 {
   padding-bottom: 30px;
   padding-top: 30px;
   text-align: center;
-  width: 80%;
+  width: 60%;
+
+  @media only screen and (max-width: 768px) {
+    margin-top: 20px;
+  }
 }
 
 .number {
@@ -119,34 +122,25 @@ h2 {
 }
 
 .ticket {
-  align-items: center;
   color: $secundary-color;
-  display: flex;
   font-size: 20px;
   font-weight: 400;
-  justify-content: center;
-  padding: 30px 0;
+  padding: 10px 0;
   width: 80%;
-  @media only screen and (min-width: 768px){
-    display: block;
-  }
+    .title-answer{
+      display: block;
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+      font-size: 14px;
+    }
 }
-
-.title-answer{
-  @media only screen and (max-width: 768px) {
-    display: flex;
-    justify-content: space-between;
-    color: $secundary-color;
-    font-size: 20px;
-    font-weight: 400;
-    padding: 30px 0;
-    width: 80%;
-  }
+output{
+  margin: 0px;
+  font-size: 14px;
 }
-.retun{
-  @media only screen and (max-width: 768px){
-    text-align:
-  }
+.underscore {
+    border-bottom: 1px solid #eee;
 }
 .btn-medium {
   background: #595ec2;
@@ -154,7 +148,7 @@ h2 {
   border-radius: 10px;
   color: #fff;
   font-family: arial;
-  font-size: 20px;
+  font-size: 16px;
   height: 10%;
   margin: 30px auto;
   padding: 10px;
@@ -332,7 +326,6 @@ footer {
     margin-top: 20px;
     width: 80px;
   }
-
   .comodo {
     background-image: url('/img/footer/comodo-segure.png');
     background-size: cover;
