--- a/scss/00_variables.scss
+++ b/scss/00_variables.scss
@@ -1,5 +1,6 @@
 $logo: url(/img/adelantos.svg);
 $logoChico: url(/img/logochico.svg);
+$user: url(/img/icons/user.svg);
 $typo-primary: 'Open Sans', sans-serif;
 $primary-color: #1b1464;
 $secundary-color: #666;
