--- a/scss/30_styles.scss
+++ b/scss/30_styles.scss
@@ -12,11 +12,12 @@ body {
   max-width: 1024px;
 }
 
-header {
+.order{
   background-image: url(/img/background.jpg);
-  background-size: cover;
-  position: relative;
   text-align: center;
+}
+
+header {
   .layout {
     @media only screen and (min-width: 768px) {
       display: none;
