--- a/scss/30_styles.scss
+++ b/scss/30_styles.scss
@@ -4,17 +4,16 @@
 }
 
 body {
+  position: relative;
   color: $primary-color;
   font: 100% $typo-primary;
+  overflow-x: hidden; /* Prevent scroll on narrow devices */
+  padding-top: 100px;
+  background: url(/img/background.jpg) no-repeat fixed;
 }
 
 .container {
   max-width: 1024px;
-}
-
-.order{
-  background-image: url(/img/background.jpg);
-  text-align: center;
 }
 
 header {
@@ -33,7 +32,6 @@ header {
     width: 40px;
   }
   nav {
-
     @media only screen and (max-width: 768px) {
       display: none;
     }
@@ -65,6 +63,13 @@ header {
       color: $primary-color;
       font-size: 14px;
       padding: 0px 10px;
+    }
+
+    .menu-b:hover{
+      background-color: $violet;
+      color: $white;
+      text-decoration: none;
+      padding: 10px;
     }
 
     .solicitud a {
@@ -191,16 +196,19 @@ output{
 
 .pocos-pasos {
   padding-top: 30px;
-}
-.imagen{
-  @media only screen and (max-width: 768px){
-      opacity: 0.2;
+  background-color: $white;
+  .img{
+    @media only screen and (max-width: 768px){
+      display: none;
+      /*opacity: 0.2;
       z-index: -1;
       position: absolute;
+      width: 5em;
+    */}
   }
 }
 .title {
-  color: #3c3c3b;
+  color: $grey;
   margin-top: 30px;
   text-align: center;
 }
@@ -210,7 +218,7 @@ output{
 }
 
 .subtitle {
-  color: #3c3c3b;
+  color: $primary-color;
   font-size: 20px;
   font-weight: 600;
   margin: 50px 0;
@@ -218,31 +226,60 @@ output{
 }
 
 .definition {
-  color: #3c3c3b;
+  color: $grey;
   font-size: 18px;
   font-weight: 400;
   margin: 10px 0;
 }
 
 .violet {
+  float: right;
   align-items: center;
   background-color: #464081;
   display: flex;
+  justify-content: space-between;
   margin-top: 50px;
+  width: 70%;
+  text-align: left;
+  @media screen and (max-width: 768px) {
+    width: 95%;
+    height: 80px;
+   }
+}
+
+.triangle {
+  margin-left: -1px;
+  width: 0;
+  height: 0;
+  border-left: 50px solid #fff;
+  border-top: 30px solid transparent;
+  border-bottom: 30px solid transparent;
+  @media only screen and (max-width: 768px){
+    border-left: 10px solid #fff;
+    border-left: 100px solid #fff;
+    border-top: 70px solid transparent;
+    border-bottom: 70px solid transparent;
+   }
 }
 
 .tilde {
-  float: left;
+  height: 25px;
+  width: 32px;
+  margin:0 10px;
+  @media only screen and (max-width: 768px){
+    display: none;
+  }
 }
 
 .violet-typo {
   border-color: #464081;
   color: #fff;
   font-size: 14px;
-  padding-top: 5px;
+  padding: 5px 20px;
 }
 
 .requirements {
+  background-color: $white;
   background-image: url('/img/background-req.png');
   background-position: center;
   background-repeat: no-repeat;
@@ -251,7 +288,7 @@ output{
 }
 
 .subtitle-req {
-  color: #3c3c3b;
+  color: $grey;
   font-size: 20px;
   font-weight: 600;
   margin: 40px 0;
@@ -278,17 +315,17 @@ output{
 }
 
 .ventajas {
-  margin-top: 50px;
+  background-color: $white;
 
   .definition-b {
-    color: #3c3c3b;
+    color: $grey;
     font-size: 18px;
     font-weight: 400;
     margin-top: 0;
   }
 
   .definition-c {
-    color: #3c3c3b;
+    color: $grey;
     font-size: 18px;
     font-weight: 400;
     margin: 0 auto;
@@ -308,7 +345,7 @@ output{
 }
 
 .contact {
-  background-image: url(../img/background-cont.png);
+  background-image: url(/img/background-cont.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% 100%;
