--- a/scss/30_styles.scss
+++ b/scss/30_styles.scss
@@ -10,6 +10,7 @@ body {
   overflow-x: hidden; /* Prevent scroll on narrow devices */
   padding-top: 100px;
   background: url(/img/background.jpg) no-repeat fixed;
+  background-size: cover;
 }
 
 .container {
