--- a/scss/30_styles.scss
+++ b/scss/30_styles.scss
@@ -405,4 +405,10 @@ footer {
 }
 .fixed-theme{
   background-color: #fff;
+  transition: background 0.3s linear;
+  padding: 0 60px 0;
+  box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.1);
+  .logo{
+    height: 40px;
+  }
 }
