--- a/scss/00_variables.scss
+++ b/scss/00_variables.scss
@@ -1,6 +1,7 @@
 $logo: url(/img/adelantos.svg);
 $logoChico: url(/img/logochico.svg);
 $user: url(/img/icons/user.svg);
+$background: url(/img/background.jpg);
 $typo-primary: 'Open Sans', sans-serif;
 $primary-color: #1b1464;
 $secundary-color: #666;
